--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,5 @@ name = "tiny-secp256k1"
 version = "0.1.0"
 authors = ["maciejhirsz <maciej.hirsz@gmail.com>"]
 
-[dependencies]
+[dev-dependencies]
+secp256k1 = "*"
