--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tiny-secp256k1"
 version = "0.1.0"
 authors = ["maciejhirsz <maciej.hirsz@gmail.com>"]
+license = "MIT"
 
 [dev-dependencies]
 secp256k1 = "*"
