--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["maciejhirsz <maciej.hirsz@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/maciejhirsz/tiny-secp256k1"
+description = "A pure-Rust `no_std` implementation of Secp256k1. A primary goal for this crate is having a working solution that can be easily compiled to WebAssembly."
 
 [dev-dependencies]
 secp256k1 = "*"
